[package]
name = "sc-rust-sdk"
version = "0.1.0"
authors = ["ProxymaX", "Evgeny Ukhanov <mrlsd@ya.ru>"]
description = "ProximaX Supercontracts Rust SDK"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "ping"
crate-type = ["cdylib"]

[[example]]
name = "debug"
crate-type = ["cdylib"]

[[example]]
name = "http"
crate-type = ["cdylib"]